--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -48,7 +48,7 @@
       }
     },
     "serve-production": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "parallel": false,
         "commands": ["node ./dist/apps/api/main.js"]
@@ -70,7 +70,7 @@
       }
     },
     "deploy": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "commands": [
           "nx build api",
