--- a/libs/api/config/integrations/project.json
+++ b/libs/api/config/integrations/project.json
@@ -23,7 +23,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/api/config/integrations"],
+      "outputs": ["{workspaceRoot}/coverage/libs/api/config/integrations"],
       "options": {
         "jestConfig": "libs/api/config/integrations/jest.config.ts",
         "passWithNoTests": true
