npx nx migrate --run-migrations

--- a/libs/api/config/features/project.json
+++ b/libs/api/config/features/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "api-config-features",
   "$schema": "..\\..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/api/config/features/src",
   "projectType": "library",
