--- a/apps/client-angular/project.json
+++ b/apps/client-angular/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "client-angular",
   "$schema": "..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/client-angular/src",
