--- a/libs/api/common/types/project.json
+++ b/libs/api/common/types/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "api-common-types",
   "$schema": "..\\..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/api/common/types/src",
   "projectType": "library",
