--- a/libs/api/data-access/core/project.json
+++ b/libs/api/data-access/core/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "api-data-access-core",
   "$schema": "..\\..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/api/data-access/core/src",
   "projectType": "library",
