--- a/libs/api/domain/users/data-access/project.json
+++ b/libs/api/domain/users/data-access/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "api-domain-users-data-access",
   "$schema": "..\\..\\..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/api/domain/users/data-access/src",
   "projectType": "library",
