--- a/libs/api/integration/graphql-prisma-postgres/docker/project.json
+++ b/libs/api/integration/graphql-prisma-postgres/docker/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "api-integration-graphql-prisma-postgres-docker",
   "$schema": "..\\..\\..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/api/integration/graphql-prisma-postgres/docker/src",
   "projectType": "library",
