--- a/libs/shared/data-access-api/project.json
+++ b/libs/shared/data-access-api/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "shared-data-access-api",
   "$schema": "..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "projectType": "library",
   "sourceRoot": "libs/shared/data-access-api/src",
