--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.1.1",
+    "@angular-devkit/core": "~15.1.0",
+    "@angular-devkit/schematics": "~15.1.0",
     "@angular-eslint/eslint-plugin": "15.0.0",
     "@angular-eslint/eslint-plugin-template": "15.0.0",
     "@angular-eslint/template-parser": "15.0.0",
@@ -100,6 +102,7 @@
     "@nrwl/workspace": "15.7.2",
     "@openapitools/openapi-generator-cli": "^2.4.26",
     "@prisma/client": "^3.9.2",
+    "@schematics/angular": "~15.1.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "28.1.8",
     "@types/node": "18.0.0",
