--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
     "postinstall": "ngcc --properties es2020 browser module main"
   },
   "dependencies": {
-    "@angular/animations": "15.1.0",
-    "@angular/common": "15.1.0",
-    "@angular/compiler": "15.1.0",
-    "@angular/core": "15.1.0",
-    "@angular/forms": "15.1.0",
-    "@angular/platform-browser": "15.1.0",
-    "@angular/platform-browser-dynamic": "15.1.0",
-    "@angular/router": "15.1.0",
+    "@angular/animations": "15.2.5",
+    "@angular/common": "15.2.5",
+    "@angular/compiler": "15.2.5",
+    "@angular/core": "15.2.5",
+    "@angular/forms": "15.2.5",
+    "@angular/platform-browser": "15.2.5",
+    "@angular/platform-browser-dynamic": "15.2.5",
+    "@angular/router": "15.2.5",
     "@nestjs/graphql": "^9.1.2",
     "@nestjs/jwt": "8.0.0",
     "@nestjs/mongoose": "^9.0.2",
@@ -69,42 +69,42 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.2",
+    "rxjs": "7.8.0",
     "swagger-ui-express": "^4.3.0",
     "tslib": "^2.0.0",
     "winston": "^3.6.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.1.1",
-    "@angular-devkit/core": "~15.1.0",
-    "@angular-devkit/schematics": "~15.1.0",
+    "@angular-devkit/build-angular": "15.2.4",
+    "@angular-devkit/core": "15.2.4",
+    "@angular-devkit/schematics": "15.2.4",
     "@angular-eslint/eslint-plugin": "15.0.0",
     "@angular-eslint/eslint-plugin-template": "15.0.0",
     "@angular-eslint/template-parser": "15.0.0",
     "@angular/cli": "~15.1.0",
-    "@angular/compiler-cli": "15.1.0",
-    "@angular/language-service": "15.1.0",
+    "@angular/compiler-cli": "15.2.5",
+    "@angular/language-service": "15.2.5",
     "@nestjs/common": "9.0.0",
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "9.0.0",
     "@nestjs/schematics": "9.0.0",
     "@nestjs/testing": "9.0.0",
-    "@nrwl/angular": "15.7.2",
-    "@nrwl/cli": "15.7.2",
-    "@nrwl/eslint-plugin-nx": "15.7.2",
-    "@nrwl/jest": "15.7.2",
-    "@nrwl/js": "15.7.2",
-    "@nrwl/linter": "15.7.2",
-    "@nrwl/nest": "15.7.2",
-    "@nrwl/node": "15.7.2",
-    "@nrwl/tao": "15.7.2",
-    "@nrwl/workspace": "15.7.2",
+    "@nrwl/angular": "15.9.2",
+    "@nrwl/cli": "15.9.2",
+    "@nrwl/eslint-plugin-nx": "15.9.2",
+    "@nrwl/jest": "15.9.2",
+    "@nrwl/js": "15.9.2",
+    "@nrwl/linter": "15.9.2",
+    "@nrwl/nest": "15.9.2",
+    "@nrwl/node": "15.9.2",
+    "@nrwl/tao": "15.9.2",
+    "@nrwl/workspace": "15.9.2",
     "@openapitools/openapi-generator-cli": "^2.4.26",
     "@prisma/client": "^3.9.2",
-    "@schematics/angular": "~15.1.0",
+    "@schematics/angular": "15.2.4",
     "@types/bcryptjs": "^2.4.2",
-    "@types/jest": "28.1.8",
+    "@types/jest": "29.4.4",
     "@types/node": "18.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
@@ -113,11 +113,11 @@
     "eslint": "8.15.0",
     "eslint-config-prettier": "^8.4.0",
     "husky": "^7.0.0",
-    "jest": "28.1.3",
-    "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "12.2.3",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
+    "jest-preset-angular": "13.0.0",
     "lint-staged": "^12.3.4",
-    "ng-packagr": "15.1.1",
+    "ng-packagr": "15.2.2",
     "postcss": "^8.4.6",
     "postcss-import": "14.1.0",
     "postcss-preset-env": "7.5.0",
@@ -125,8 +125,8 @@
     "prettier": "2.6.2",
     "prisma": "^3.9.2",
     "prisma-nestjs-graphql": "^14.6.2",
-    "ts-jest": "28.0.8",
+    "ts-jest": "29.0.5",
     "ts-node": "10.8.1",
-    "typescript": "4.8.4"
+    "typescript": "4.9.5"
   }
 }
